# Trie-Enhanced-ContactManager

./: CMakeLists.txt  README.md
data/: contacts.json
include/: Contact.h  ContactManager.h  Trie.h  utils.h
src/: Contact.cpp  ContactManager.cpp  Trie.cpp  main.cpp  utils.cpp
